--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -136,11 +136,7 @@
                                             <div class="form-group">
                                                 <label asp-for="Description" class="control-label"></label>
                                                 <textarea name="Description" class="form-control" rows="4" required></textarea>
-                                            </div>
-                                            <div class="form-group">
-                                                <label asp-for="CompanyId" class="control-label"></label>
-                                                <select name="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
-                                            </div>
+                                            </div>                                           
                                             <div class="form-group">
                                                 <label class="control-label">Upload Image</label>
                                                 <input type="file" name="image" />
@@ -199,11 +195,21 @@
                                                 <input type="hidden" name="imageData" value="@Convert.ToBase64String(Model.ImageData)" class="form-control" />
                                                 <input type="hidden" name="contentType" value="@Model.ContentType" class="form-control" />
                                             }
-                                            <div class="form-group">
-                                                <label asp-for="CompanyId" class="control-label"></label>
-                                                <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
-                                                <span asp-validation-for="CompanyId" class="text-danger"></span>
-                                            </div>
+
+
+                                            @if ((await UserManager.IsInRoleAsync(user, Roles.Admin.ToString())))
+                                            {
+                                                <div class="form-group">
+                                                    <label asp-for="CompanyId" class="control-label"></label>
+                                                    <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
+                                                    <span asp-validation-for="CompanyId" class="text-danger"></span>
+                                                </div>
+                                            }
+                                            else
+                                            {
+                                                <input type="hidden" asp-for="CompanyId" class="form-control">
+                                            }
+
 
 
 
