--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel1">Create New Ticket</h5>
+                                        <h5 class="modal-title" id="exampleModalLabel1">Create New Ticket #@ViewBag.NumberOfTicket</h5>
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
@@ -244,7 +244,7 @@
                             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel1">Create New Ticket</h5>
+                                        <h5 class="modal-title" id="exampleModalLabel1">Create New Ticket #@ViewBag.NumberOfTicket</h5>
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
@@ -398,7 +398,7 @@
                             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel1">Create New Ticket</h5>
+                                        <h5 class="modal-title" id="exampleModalLabel1">Create New Ticket #@ViewBag.NumberOfTicket</h5>
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
@@ -726,6 +726,9 @@
                             <thead>
                                 <tr>
                                     <th>
+                                        Id
+                                    </th>
+                                    <th>
                                         @Html.DisplayNameFor(model => model.Name)
                                     </th>
                                     <th>
@@ -765,6 +768,9 @@
                                 @foreach (var item in Model)
                                 {
                                     <tr>
+                                        <td>
+                                           #@item.Id
+                                        </td>
                                         <td>
                                             @Html.DisplayFor(modelItem => item.Name)
                                         </td>
