--- a/Views/Tickets/Details.cshtml
+++ b/Views/Tickets/Details.cshtml
@@ -25,6 +25,12 @@
             <div class="card-body">
                 <dl class="row">
                     <dt class="col-sm-2">
+                        Id
+                    </dt>
+                    <dd class="col-sm-10">
+                        #@Html.DisplayFor(model => model.Id)
+                    </dd>
+                    <dt class="col-sm-2">
                         @Html.DisplayNameFor(model => model.Name)
                     </dt>
                     <dd class="col-sm-10">
