--- a/Views/Tickets/ProjectIndex.cshtml
+++ b/Views/Tickets/ProjectIndex.cshtml
@@ -1,14 +1,19 @@
 ﻿@model IEnumerable<BugTracker.Models.Ticket>
-
+@using Microsoft.AspNetCore.Identity
+@using BugTracker.Data.Enums
+@using BugTracker.Services
+@inject UserManager<CustomUser> UserManager
+@inject ICustomRoleService roleService
 @{
     ViewData["Title"] = "Tickets";
+    var user = await UserManager.GetUserAsync(User);
 }
 
 <div class="row">
     <div class="col">
         <div class="card">
             <div class="card-header bg-dark">
-                <h3 class="card-title">All Tickets</h3>
+                <h3 class="card-title">All Tickets in @ViewBag.ProjectName</h3>
 
                 <div class="card-tools">
                     <div class="input-group input-group-sm">
@@ -33,47 +38,54 @@
                     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Create New Ticket</h5>
+                                <h5 class="modal-title" id="exampleModalLabel">Create New Ticket #@ViewBag.NumberOfTicket</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
                             <form asp-controller="Tickets" asp-action="Create" method="post">
-                                <div class="modal-body">                                  
+                                <div class="modal-body">
                                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                     <div class="form-group">
                                         <label class="control-label">Name</label>
-                                        <input name="Name" class="form-control" required />                                       
+                                        <input name="Name" class="form-control" required />
                                     </div>
-                                    <div class="form-group">;.
+                                    <div class="form-group">
                                         <label class="control-label">Description</label>
-                                        <input name="Description" class="form-control" required />                                      
+                                        <input name="Description" class="form-control" required />
                                     </div>
-                                    <div class="form-group form-check">
-                                        <label class="form-check-label">
-                                            <input class="form-check-input" name="IsAssigned" type="checkbox" value="true" /> Assigned?
-                                        </label>
-                                    </div>
-                                    <div class="form-group">
-                                        <label name="DeveloperId" class="control-label">Developer</label>
-                                        <select name="projectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
-                                    </div>
-                                    <div class="form-group">
-                                        <label name="DeveloperId" class="control-label">Developer</label>
-                                        <select name="DeveloperId" class="form-control" asp-items="ViewBag.DeveloperId"></select>
-                                    </div>
-                                    <div class="form-group">
-                                        <label name="StatusId" class="control-label">Status</label>
-                                        <select name="StatusId" class="form-control" asp-items="ViewBag.StatusId"></select>
-                                    </div>
-                                    <div class="form-group">
-                                        <label name="PriorityId" class="control-label">Priority</label>
-                                        <select name="PriorityId" class="form-control" asp-items="ViewBag.PriorityId"></select>
-                                    </div>
-                                    <div class="form-group">
-                                        <label name="TicketTypeId" class="control-label">TicketType</label>
-                                        <select name="TicketTypeId" class="form-control" asp-items="ViewBag.TicketTypeId"></select>
-                                    </div>
+                                    <input type="hidden" class="form-control" name="projectId" value="@ViewBag.ProjectId" />
+                                    @if (!(await UserManager.IsInRoleAsync(user, Roles.Developer.ToString())))
+                                    {
+                                        <div class="form-group form-check">
+                                            <label class="form-check-label">
+                                                <input class="form-check-input" name="IsAssigned" type="checkbox" value="true" /> Assigned?
+                                            </label>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label name="DeveloperId" class="control-label">Developer</label>
+                                            <select name="DeveloperId" class="form-control" required asp-items="@ViewBag.DeveloperId"></select>
+                                        </div>
+                                    }
+
+
+                                    @if (!(await UserManager.IsInRoleAsync(user, Roles.Admin.ToString())) || !(await UserManager.IsInRoleAsync(user, Roles.ProjectManager.ToString())))
+                                    {
+                                        <div class="form-group">
+                                            <label name="StatusId" class="control-label">Status</label>
+                                            <select name="StatusId" class="form-control" asp-items="ViewBag.StatusId"></select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label name="PriorityId" class="control-label">Priority</label>
+                                            <select name="PriorityId" class="form-control" asp-items="ViewBag.PriorityId"></select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label name="TicketTypeId" class="control-label">Ticket Type</label>
+                                            <select name="TicketTypeId" class="form-control" asp-items="ViewBag.TicketTypeId"></select>
+                                        </div>
+                                    }
+
                                 </div>
                                 <div class="modal-footer">
                                     <button type="submit" class="btn btn-primary">Create</button>
@@ -86,6 +98,9 @@
                 <table id="viewTicket" class="table table-striped table-hover">
                     <thead>
                         <tr>
+                            <th>
+                                Id
+                            </th>
                             <th>
                                 @Html.DisplayNameFor(model => model.Name)
                             </th>
@@ -127,6 +142,9 @@
                         {
                             <tr>
                                 <td>
+                                    #@item.Id
+                                </td>
+                                <td>
                                     @Html.DisplayFor(modelItem => item.Name)
                                 </td>
                                 <td>
@@ -161,8 +179,12 @@
                                 </td>
                                 <td class="project-actions text-right">
                                     <a class="btn btn-primary btn-sm mb-1" asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-folder"></i> View</a>
-                                    <a class="btn btn-info btn-sm mb-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pencil-alt"></i> Edit</a>
-                                    <a class="btn btn-danger btn-sm mb-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash"></i> Delete</a>
+                                    @if (await roleService.IsUserInRoleAsync(user, Roles.Admin.ToString()) || await roleService.IsUserInRoleAsync(user, Roles.ProjectManager.ToString()))
+                                    {
+                                        <a class="btn btn-info btn-sm mb-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-pencil-alt"></i> Edit</a>
+                                        <a class="btn btn-danger btn-sm mb-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash"></i> Delete</a>
+                                    }
+
                                 </td>
                             </tr>
                         }
