--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,9 +18,19 @@
 </div>
 
 <div class="container-fluid" style="opacity: 0.5;">
-    <br />
-    <br /><br /><br />
+    <ul class="navbar-nav">
+        <li class="nav-item d-none d-sm-inline-block">
+            <a class="nav-link" style="color:black;font-weight: 800;letter-spacing: 1px;text-transform: uppercase;border-radius: 0;font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;">.</a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
+            <a class="nav-link" style="color:black;font-weight: 800;letter-spacing: 1px;text-transform: uppercase;border-radius: 0;font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;">.</a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
+            <a class="nav-link" style="color:black;font-weight: 800;letter-spacing: 1px;text-transform: uppercase;border-radius: 0;font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;">.</a>
+        </li>
+    </ul>
     <div class="row">
+
         <div class="col"></div>
         <div class="col-lg-3half">
             <div class="shadow-lg p-3 mb-4 bg-dark rounded">
