update role manger and invite ticket email notification

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -439,7 +439,15 @@
                                         </p>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a asp-controller="Home" asp-action="ManageRole" class="nav-link">
+                                        <i class="nav-icon fas fa-people-arrows"></i>
+                                        <p>
+                                            Role's Management
 
+                                        </p>
+                                    </a>
+                                </li>
                                 <li class="nav-item">
                                     <a asp-controller="Projects" asp-action="ManagerUserProject" class="nav-link">
                                         <i class="nav-icon fas fa-user-edit"></i>
