--- a/Views/Home/ManageRole.cshtml
+++ b/Views/Home/ManageRole.cshtml
@@ -10,10 +10,8 @@
 }
 @{
     var people = userManager.Users.ToList();
-    var users = new MultiSelectList(userManager.Users, "Id", "FullName");
-    var roles = new SelectList(roleService.NonDemoRoles(), "Name", "Name");
+ 
 }
-
     <div class="row">
         <div class="col">
             <div class="card">
@@ -34,12 +32,12 @@
                                                             <div class="form-group">
                                                                 <label class="form-control bg-dark"><i class="fas fa-chevron-down"></i> Select Role <i class="fas fa-chevron-down"></i></label>
 
-                                                                <select class="form-control  select2bs4" style="width: 100%;" name="role" asp-items="@roles"></select>
+                                                                <select class="form-control  select2bs4" style="width: 100%;" name="role" asp-items="ViewBag.roles"></select>
                                                             </div>
                                                             <br /><hr />
                                                             <div class="form-group">
                                                                 <label class="form-control bg-dark"><i class="fas fa-chevron-down"></i> Select Users <i class="fas fa-chevron-down"></i></label>
-                                                                <select class="duallistbox" size="15" multiple="multiple" name="userId" asp-items="@users"></select>
+                                                                <select class="duallistbox" size="15" multiple="multiple" name="userId" asp-items="ViewBag.users"></select>
                                                             </div>
                                                             <!-- /.form-group -->
                                                         </div>
